// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Default Nav List - Trigger item active update 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-_r_d_"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_e_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_f_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_g_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_h_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Default Nav List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav test-nav-class"
    data-ouia-component-id="OUIA-Generated-Nav-_r_1_"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list test-nav-list-class"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_2_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_3_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_4_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_5_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Expandable Nav List - Trigger toggle 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-_r_13_"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item expandable-group"
        data-ouia-component-id="OUIA-Generated-NavExpandable-_r_15_"
        data-ouia-component-type="PF6/NavExpandable"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="false"
          class="pf-v6-c-nav__link"
          id="grp-1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Section 1
          </span>
          <span
            class="pf-v6-c-nav__toggle"
          >
            <span
              class="pf-v6-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
        <section
          aria-labelledby="grp-1"
          class="pf-v6-c-nav__subnav"
          hidden=""
          inert=""
        >
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_16_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link1"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 1
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_17_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link2"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 2
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_18_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link3"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 3
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_19_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link4"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 4
                </span>
              </a>
            </li>
          </ul>
        </section>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Expandable Nav List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-_r_j_"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavExpandable-_r_l_"
        data-ouia-component-type="PF6/NavExpandable"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="false"
          class="pf-v6-c-nav__link"
          id="grp-1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Section 1
          </span>
          <span
            class="pf-v6-c-nav__toggle"
          >
            <span
              class="pf-v6-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
        <section
          aria-labelledby="grp-1"
          class="pf-v6-c-nav__subnav"
          hidden=""
          inert=""
        >
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_m_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link1"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 1
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_n_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link2"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 2
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_o_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link3"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 3
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_p_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link4"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 4
                </span>
              </a>
            </li>
          </ul>
        </section>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Expandable Nav List with aria label 1`] = `
<DocumentFragment>
  <nav
    aria-label="Test"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-_r_1b_"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavExpandable-_r_1d_"
        data-ouia-component-type="PF6/NavExpandable"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="false"
          class="pf-v6-c-nav__link"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Section 1
          </span>
          <span
            class="pf-v6-c-nav__toggle"
          >
            <span
              class="pf-v6-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
        <section
          aria-labelledby="grp-1"
          class="pf-v6-c-nav__subnav"
          hidden=""
          inert=""
        >
          <h2
            class="pf-v6-screen-reader"
            id="grp-1"
          >
            Section 1 - Example sub-navigation
          </h2>
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_1e_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link1"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 1
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_1f_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link2"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 2
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_1g_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link3"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 3
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-_r_1h_"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link4"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 4
                </span>
              </a>
            </li>
          </ul>
        </section>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Horizontal Nav List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav pf-m-horizontal"
    data-ouia-component-id="OUIA-Generated-Nav-horizontal-_r_1v_"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_21_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_22_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_23_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_24_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Horizontal SubNav List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Local"
    class="pf-v6-c-nav pf-m-horizontal pf-m-subnav"
    data-ouia-component-id="OUIA-Generated-Nav-horizontal-subnav-_r_27_"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_29_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_2a_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_2b_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_2c_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Nav Grouped List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-_r_1j_"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <section
      aria-labelledby="grp-1"
      class="pf-v6-c-nav__section"
    >
      <h2
        class="pf-v6-c-nav__section-title"
        id="grp-1"
      >
        Section 1
      </h2>
      <ul
        class="pf-v6-c-nav__list"
        role="list"
      >
        <ul
          class="pf-v6-c-nav__list"
          role="list"
        >
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-_r_1l_"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link1"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 1
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-_r_1m_"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link2"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 2
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-_r_1n_"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link3"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 3
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-_r_1o_"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link4"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 4
              </span>
            </a>
          </li>
        </ul>
      </ul>
    </section>
    <section
      aria-labelledby="grp-2"
      class="pf-v6-c-nav__section"
    >
      <h2
        class="pf-v6-c-nav__section-title"
        id="grp-2"
      >
        Section 2
      </h2>
      <ul
        class="pf-v6-c-nav__list"
        role="list"
      >
        <ul
          class="pf-v6-c-nav__list"
          role="list"
        >
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-_r_1q_"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link1"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 1
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-_r_1r_"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link2"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 2
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-_r_1s_"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link3"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 3
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-_r_1t_"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link4"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 4
              </span>
            </a>
          </li>
        </ul>
      </ul>
    </section>
  </nav>
</DocumentFragment>
`;

exports[`Nav Nav List with custom item nodes 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-_r_2f_"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_2g_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <div
          class="pf-v6-c-nav__link my-custom-node"
        >
          My custom node
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Nav List with flyout 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-_r_2i_"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item pf-m-flyout test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_2j_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <div
          class="pf-v6-c-nav__link my-custom-node"
        >
          My custom node
          <span
            class="pf-v6-c-nav__toggle"
          >
            <span
              class="pf-v6-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                />
              </svg>
            </span>
          </span>
        </div>
      </li>
    </ul>
    <div
      data-popper-escaped="true"
      data-popper-placement="right-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 1; transition: opacity 0ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: 0px; transform: translate(0px, 0px);"
    >
      <div>
        Flyout test
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Nav Renders nav list in strict mode 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav test-nav-class"
    data-ouia-component-id="OUIA-Generated-Nav-_r_7_"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list test-nav-list-class"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_8_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_9_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_a_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-_r_b_"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
